#111 [refactor] : DTO와 서비스 로직 간에 코드를 적절하게 분리한다